saving betas to s3